--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TMDB_API_KEY=44915b722c13ecf791a8054bfa0cb21b
-GEMINI_API_KEY=AIzaSyCo0lJ4sh0U1OLsSx9pkY4PUum6gW3VEX4
+TMDB_API_KEY=
+GEMINI_API_KEY=
